@@ -12,8 +12,6 @@ import com.nike.backstopper.handler.listener.ApiExceptionHandlerListenerResult;
 import com.nike.internal.util.Pair;
 
 import org.assertj.core.api.Assertions;
-import org.assertj.core.api.ThrowableAssert;
-import org.hibernate.validator.constraints.NotEmpty;
 import org.junit.Test;
 
 import java.lang.annotation.Annotation;
@@ -22,11 +20,12 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import javax.validation.ConstraintViolation;
-import javax.validation.Path;
-import javax.validation.constraints.NotNull;
-import javax.validation.groups.Default;
-import javax.validation.metadata.ConstraintDescriptor;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.Path;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.groups.Default;
+import jakarta.validation.metadata.ConstraintDescriptor;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -44,8 +43,8 @@ public class ClientDataValidationErrorHandlerListenerTest extends ListenerTestBa
 
     private static final ProjectApiErrors testProjectApiErrors = ProjectApiErrorsForTesting.withProjectSpecificData(null, null);
 
-    private ClientDataValidationErrorHandlerListener listener = new ClientDataValidationErrorHandlerListener(testProjectApiErrors,
-                                                                                                             ApiExceptionHandlerUtils.DEFAULT_IMPL);
+    private final ClientDataValidationErrorHandlerListener listener = new ClientDataValidationErrorHandlerListener(testProjectApiErrors,
+                                                                                                                   ApiExceptionHandlerUtils.DEFAULT_IMPL);
 
     @Test
     public void constructor_sets_projectApiErrors_and_utils_to_passed_in_args() {
@@ -64,12 +63,9 @@ public class ClientDataValidationErrorHandlerListenerTest extends ListenerTestBa
     @Test
     public void constructor_throws_IllegalArgumentException_if_passed_null_projectApiErrors() {
         // when
-        Throwable ex = Assertions.catchThrowable(new ThrowableAssert.ThrowingCallable() {
-            @Override
-            public void call() throws Throwable {
-                new ClientDataValidationErrorHandlerListener(null, ApiExceptionHandlerUtils.DEFAULT_IMPL);
-            }
-        });
+        @SuppressWarnings("DataFlowIssue") 
+        Throwable ex = Assertions.catchThrowable(
+            () -> new ClientDataValidationErrorHandlerListener(null, ApiExceptionHandlerUtils.DEFAULT_IMPL));
 
         // then
         Assertions.assertThat(ex).isInstanceOf(IllegalArgumentException.class);
@@ -78,12 +74,9 @@ public class ClientDataValidationErrorHandlerListenerTest extends ListenerTestBa
     @Test
     public void constructor_throws_IllegalArgumentException_if_passed_null_utils() {
         // when
-        Throwable ex = Assertions.catchThrowable(new ThrowableAssert.ThrowingCallable() {
-            @Override
-            public void call() throws Throwable {
-                new ClientDataValidationErrorHandlerListener(mock(ProjectApiErrors.class), null);
-            }
-        });
+        @SuppressWarnings("DataFlowIssue")
+        Throwable ex = Assertions.catchThrowable(
+            () -> new ClientDataValidationErrorHandlerListener(mock(ProjectApiErrors.class), null));
 
         // then
         Assertions.assertThat(ex).isInstanceOf(IllegalArgumentException.class);
@@ -98,14 +91,14 @@ public class ClientDataValidationErrorHandlerListenerTest extends ListenerTestBa
     public void shouldReturnGENERIC_SERVICE_ERRORForClientDataValidationErrorThatHasNullViolations() {
         ClientDataValidationError ex = new ClientDataValidationError(null, null, null);
         ApiExceptionHandlerListenerResult result = listener.shouldHandleException(ex);
-        validateResponse(result, true, Collections.<ApiError>singletonList(testProjectApiErrors.getGenericServiceError()));
+        validateResponse(result, true, Collections.singletonList(testProjectApiErrors.getGenericServiceError()));
     }
 
     @Test
     public void shouldReturnGENERIC_SERVICE_ERRORForClientDataValidationErrorThatHasEmptyViolations() {
-        ClientDataValidationError ex = new ClientDataValidationError(null, Collections.<ConstraintViolation<Object>>emptyList(), null);
+        ClientDataValidationError ex = new ClientDataValidationError(null, Collections.emptyList(), null);
         ApiExceptionHandlerListenerResult result = listener.shouldHandleException(ex);
-        validateResponse(result, true, Collections.<ApiError>singletonList(testProjectApiErrors.getGenericServiceError()));
+        validateResponse(result, true, Collections.singletonList(testProjectApiErrors.getGenericServiceError()));
     }
 
     @Test
@@ -144,7 +137,13 @@ public class ClientDataValidationErrorHandlerListenerTest extends ListenerTestBa
         assertThat(extraLoggingDetails.isEmpty(), is(true));
     }
 
-    private ConstraintViolation<Object> setupConstraintViolation(Class offendingObjectClass, String path, Class<? extends Annotation> annotationClass, String message) {
+    private ConstraintViolation<Object> setupConstraintViolation(
+        Class<?> offendingObjectClass,
+        String path,
+        Class<? extends Annotation> annotationClass,
+        String message
+    ) {
+        @SuppressWarnings("unchecked") 
         ConstraintViolation<Object> mockConstraintViolation = mock(ConstraintViolation.class);
 
         Path mockPath = mock(Path.class);
@@ -168,11 +167,15 @@ public class ClientDataValidationErrorHandlerListenerTest extends ListenerTestBa
     @Test
     public void shouldReturnGENERIC_SERVICE_ERRORForViolationThatDoesNotMapToApiError() {
         ConstraintViolation<Object> violation = setupConstraintViolation(SomeValidatableObject.class, "path.to.violation", NotNull.class, "I_Am_Invalid");
-        ClientDataValidationError ex = new ClientDataValidationError(Arrays.<Object>asList(new SomeValidatableObject("someArg1", "someArg2")), Collections.singletonList(violation), null);
+        ClientDataValidationError ex = new ClientDataValidationError(
+            List.of(new SomeValidatableObject("someArg1", "someArg2")), Collections.singletonList(violation), null);
         ApiExceptionHandlerListenerResult result = listener.shouldHandleException(ex);
         validateResponse(result, true, Collections.<ApiError>singletonList(
             // We expect it to be the generic error, with some metadata about the field that had an issue
-            new ApiErrorWithMetadata(testProjectApiErrors.getGenericServiceError(), Pair.of("field", (Object)"path.to.violation"))
+            new ApiErrorWithMetadata(
+                testProjectApiErrors.getGenericServiceError(),
+                Pair.of("field", "path.to.violation")
+            )
         ));
     }
 
@@ -181,16 +184,21 @@ public class ClientDataValidationErrorHandlerListenerTest extends ListenerTestBa
         ConstraintViolation<Object> violation1 = setupConstraintViolation(SomeValidatableObject.class, "path.to.violation1", NotNull.class, "MISSING_EXPECTED_CONTENT");
         ConstraintViolation<Object> violation2 = setupConstraintViolation(SomeValidatableObject.class, "path.to.violation2", NotEmpty.class, "TYPE_CONVERSION_ERROR");
         ClientDataValidationError ex = new ClientDataValidationError(
-            Collections.<Object>singletonList(new SomeValidatableObject("someArg1", "someArg2")), Arrays.asList(violation1, violation2), null);
+            Collections.singletonList(new SomeValidatableObject("someArg1", "someArg2")), Arrays.asList(violation1, violation2), null);
         ApiExceptionHandlerListenerResult result = listener.shouldHandleException(ex);
         validateResponse(result, true, Arrays.<ApiError>asList(
             // We expect them to be the properly associated errors, with some metadata about the field that had an issue
-            new ApiErrorWithMetadata(BarebonesCoreApiErrorForTesting.MISSING_EXPECTED_CONTENT, Pair.of("field", (Object)"path.to.violation1")),
-            new ApiErrorWithMetadata(BarebonesCoreApiErrorForTesting.TYPE_CONVERSION_ERROR, Pair.of("field", (Object)"path.to.violation2"))
+            new ApiErrorWithMetadata(BarebonesCoreApiErrorForTesting.MISSING_EXPECTED_CONTENT, Pair.of("field",
+                                                                                                       "path.to.violation1"
+            )),
+            new ApiErrorWithMetadata(BarebonesCoreApiErrorForTesting.TYPE_CONVERSION_ERROR, Pair.of("field",
+                                                                                                    "path.to.violation2"
+            ))
         ));
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void shouldAddExtraLoggingDetailsForClientDataValidationError() {
         ConstraintViolation<Object> violation1 = setupConstraintViolation(SomeValidatableObject.class, "path.to.violation1", NotNull.class, "MISSING_EXPECTED_CONTENT");
         ConstraintViolation<Object> violation2 = setupConstraintViolation(Object.class, "path.to.violation2", NotEmpty.class, "TYPE_CONVERSION_ERROR");
@@ -206,24 +214,21 @@ public class ClientDataValidationErrorHandlerListenerTest extends ListenerTestBa
                 Pair.of("client_data_validation_failed_objects", SomeValidatableObject.class.getName() + "," + Object.class.getName()),
                 Pair.of("validation_groups_considered", Default.class.getName() + "," + SomeValidationGroup.class.getName()),
                 Pair.of("constraint_violation_details",
-                        "SomeValidatableObject.path.to.violation1|javax.validation.constraints.NotNull|MISSING_EXPECTED_CONTENT,Object.path.to.violation2|org.hibernate.validator.constraints" +
-                                ".NotEmpty|TYPE_CONVERSION_ERROR"))
+                        "SomeValidatableObject.path.to.violation1|jakarta.validation.constraints.NotNull|MISSING_EXPECTED_CONTENT,"
+                        + "Object.path.to.violation2|jakarta.validation.constraints.NotEmpty|TYPE_CONVERSION_ERROR"))
         );
     }
 
-    private static interface SomeValidationGroup {}
+    private interface SomeValidationGroup {}
 
-    private static class SomeValidatableObject {
-
-        @NotEmpty(message = "MISSING_EXPECTED_CONTENT")
-        private String arg1;
-        @NotEmpty(message = "MISSING_EXPECTED_CONTENT")
-        private String arg2;
-
-        public SomeValidatableObject(String arg1, String arg2) {
-            this.arg1 = arg1;
-            this.arg2 = arg2;
+    private record SomeValidatableObject(
+        @NotEmpty(message = "MISSING_EXPECTED_CONTENT") String arg1,
+        @NotEmpty(message = "MISSING_EXPECTED_CONTENT") String arg2
+    ) {
+            private SomeValidatableObject(String arg1, String arg2) {
+                this.arg1 = arg1;
+                this.arg2 = arg2;
+            }
         }
-    }
 
 }
